--- a/src/app/views/pagInicial.marko
+++ b/src/app/views/pagInicial.marko
@@ -32,10 +32,8 @@
       <a href="/pagOceania"><img src="/estatico/res/pin.png" class="rpin" id="pin-oce" style="width: 2%;"> </a>
       <a href="/pagAfrica"><img src="/estatico/res/pin.png" class="rpin" id="pin-afri" style="width: 2%;"> </a>
 
-    <button id="btn" onclick="abrirModal()">aaa</button>
-
     <div id="fundo"></div>
-    <div id="modal">
+    <div id="modal" for(ptAmSul in data.amSul)>
         <a href="#" class="fechar" onclick="fecharModal();">fechar</a>
     </div>
 
