--- a/src/app/views/pagAmSul.marko
+++ b/src/app/views/pagAmSul.marko
@@ -20,17 +20,11 @@
                     </li>
             </ul>
         </nav>
-        
-        <img src="/estatico/res/amsul.png" style="width: 90%; height: 90%;">
-        <!--<img src="res/amsul.png" style="width:100%">-->
-        <!--a class="rpin" id="pin-br"></a>-->
-        <img src="/estatico/res/pin.png" class="rpin" id="pin-br" style="width: 2%;" onclick="abrirModal();">
-        <img src="/estatico/res/pin.png" class="rpin" id="pin-arg" style="width: 2%;">
-        <img src="/estatico/res/pin.png" class="rpin" id="pin-chile" style="width: 2%;">
-        <img src="/estatico/res/pin.png" class="rpin" id="pin-peru" style="width: 2%;">
-        <img src="/estatico/res/pin.png" class="rpin" id="pin-equa" style="width: 2%;">
-        <img src="/estatico/res/pin.png" class="rpin" id="pin-gui" style="width: 2%;">
-        <img src="/estatico/res/pin.png" class="rpin" id="pin-colom" style="width: 2%;">
+        <form action="/pagAmSul" method="post">
+            <img src="/estatico/res/amsul.png" style="width: 90%; height: 90%;">
+            <for (pinSul in data.pin) img src="${pinSul.img}" class="rpin" id="${pin.id}" style="width: 2%;" onclick="abrirModal();">
+                <a href="" onclick="this.href='/pagAmSul/${pin.idpt}'">aaaa</a>
+        </form>
     </div>
 
     <div id="fundo"></div>
